# jieba-bot

./: Cargo.toml  README.rst  jieba-bot.conf  jieba-bot.service
src/: main.rs
