[package]
name = "jieba-bot"
version = "0.2.0"
authors = ["Ye Jingchen <ye.jingchen@gmail.com>"]
edition = "2018"

[dependencies]
jieba-rs = "0.5"
tbot = "0.6"
tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4"
log = "0.4.0"
env_logger = "0.7.1"
hyper-proxy = "0.6" # for tbot proxy support
